feat: add springdoc lib to generate swagger + add javadoc